--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
         android:id="@+id/textView" />
 
     <VideoView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/videoView"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
@@ -25,5 +25,6 @@
     <SurfaceView
         android:layout_width="match_parent"
         android:id="@+id/sufaceView"
+        android:visibility="visible"
         android:layout_height="match_parent" />
 </RelativeLayout>
